{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "b08f03bb-6ffc-40f6-83a9-0213de34ebf2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f5c6222b-74cc-410c-8736-0cb4b37f9c43",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e73ed3f3-7a67-40f4-94d6-af884149236b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "9c98bb30-73e6-45c7-8e32-2a18992f4d88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slice",
                    "type": "Button",
                    "id": "cdf6a16e-de3c-4419-b1c3-1b52a8f15385",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0eab64e-3c52-436c-87bd-12434ee7ca65",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f8dc187d-8a09-47da-b957-6066058168a0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1c108b28-d43b-4845-9d57-89561481c200",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "71fee988-be16-4134-9e84-97b5d8e9751b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "278bd79b-b44e-4d12-be1f-f51c4088e2d9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "33355f68-a013-4009-871d-609134bc8c63",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f57c2c18-8f19-4273-992b-ad3d9bf487ea",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20953cc3-e836-4e8f-a7d1-be657c9752b8",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slice",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LevelEditor",
            "id": "9449d73d-313b-4118-82e3-24a8bb0259be",
            "actions": [
                {
                    "name": "MouseLeftButton",
                    "type": "Button",
                    "id": "ae21c847-1f66-4316-a262-eee5769f3ff8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightButton",
                    "type": "Button",
                    "id": "29e8cb2b-90b0-4773-991a-30b90ee84ad0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMiddleButton",
                    "type": "Button",
                    "id": "32cac3c6-3d5c-4bb2-921e-711d7d4451ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "2bfb80a4-26ed-4d90-b555-054a5519e77a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShiftButton",
                    "type": "Button",
                    "id": "799fdf90-8207-4541-9b7c-32adda34045c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CtrlButton",
                    "type": "Button",
                    "id": "c2aa88f7-dfa8-4be0-8686-305030f30d45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZButton",
                    "type": "Button",
                    "id": "8717c785-5f1d-4701-a017-277ff0cc177e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteButton",
                    "type": "Button",
                    "id": "4151a266-1614-4499-8e94-482da3f8a5d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CButton",
                    "type": "Button",
                    "id": "95f1226a-e9a8-4638-9efa-c98114234c07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VButton",
                    "type": "Button",
                    "id": "9f4a6263-ca35-483d-b910-e0870c7fa6f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "389e03b5-e949-4899-abfb-39c6ad3c27f7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15886c0f-15cb-4a94-be05-8411631d1008",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "493c756c-f7c7-4c50-a956-eb3e3810d213",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMiddleButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24662bfa-e8b2-43a9-86d4-b94044ef1294",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad9aba12-9d0b-4993-807d-fba5e3aa92cb",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b6d4f76-839e-4277-b42c-234159d240e3",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CtrlButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81f23e94-4f93-4fc3-a37e-c8086864ce22",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7100a455-0aa8-4b57-bf4e-be2a506f82cc",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32f6e085-9b0a-43e1-81e8-d00f11fd5ad3",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e56c1b03-66a5-4ab1-a16d-aba6237027fe",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debugger",
            "id": "4cf33d12-3205-4d8f-babc-c5cae1dc0812",
            "actions": [
                {
                    "name": "Num1",
                    "type": "Value",
                    "id": "5d717891-86b6-488d-bc63-560d9fdbefa6",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Num2",
                    "type": "Button",
                    "id": "45f24c21-de1f-4fe7-b0c1-c4964980cfc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num3",
                    "type": "Button",
                    "id": "b2adbc1c-23e2-4af3-8066-1095b87298f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num4",
                    "type": "Button",
                    "id": "15ad083e-7539-437e-a8ab-06f53e7628bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Num5",
                    "type": "Button",
                    "id": "673da418-c86f-4073-be0c-13a3e1d04d75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "92675584-e303-44a7-b0b8-b787a7bcb926",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "393f2e32-309c-4d98-84ac-33cef61c7c81",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb42c541-2b10-4f96-99fd-8e1e662fc51f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "875b1717-4e88-4e76-9d82-f34562dd053a",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "915b6cf6-44ba-4da8-88ce-eaa81c7ad1cf",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Num5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}